  * raggle: added reuters oddly enough

* Wed Mar 16 16:27:53 2005, pabs <pabs@pablotron.org>
  * TODO: mark stuff off, make list of remaining things to take care of

* Wed Mar 16 18:15:40 2005, pabs <pabs@pablotron.org>
  * raggle: preliminary i18n support (via gettext-ruby).  this just 
    wraps the basic strings, and i'm deliberately not installing the
    locale stuff in the makefile, because i think it's too rough
    to rely on.  package maintainers will probably have to fine-tune
    this stuff for me because i'm kind of a neophyte in this area :D.
  * added po/
  * added po/en_US.po

* Wed Mar 16 19:03:45 2005, pabs <pabs@pablotron.org>
  * README: add info about gettext-ruby
  * po/en_US.po: fix minor typo

* Wed Mar 16 19:05:34 2005, pabs <pabs@pablotron.org>
  * TODO: mark i18n off, mother chuckers!

* Wed Mar 16 19:13:31 2005, pabs <pabs@pablotron.org>
  * raggle: increment version to 0.4.0 (from 0.4.0-test)
  * releasing 0.4.0

* Sat Mar 19 11:57:21 2005, pabs <pabs@pablotron.org>
  * raggle: fixed find feeds window (don't dup find_desc str)
  * raggle: added GetText::bindtextdomain()
  * raggle: fixed category sorting inc at window
  * raggle: fixed window title translations (were getting mangled by
    themes)

* Sat Mar 19 12:09:41 2005, pabs <pabs@pablotron.org>
  * REALLY releasing 0.4.0

* Sat Mar 19 13:28:32 2005, pabs <pabs@pablotron.org>
  * raggle: piece of shit.  I ALREADY FIXED THIS

* Sun Mar 20 22:58:24 2005, pabs <pabs@pablotron.org>
  * raggle: add preliminary bookmark support (bound to B). supports
    saving to CSV and delicious, although the CSV backend does not work
    at the moment (friggin Net::HTTP stuff needs to be updatd to 1.2
    first)
  * README: add note about Rubilicious.
  * TODO: addd note about Net::HTTP
  * BUGS: added note from Michael Ablassmeier (see raggle-dev) about
    sorting bug
  * raggle: add support for sqlite and mysql bookmark db backends
  * README: add note about sqlite and mysql bookmark db backends